--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,20 @@
     <groupId>org.example</groupId>
     <artifactId>TravelGuide</artifactId>
     <version>1.0-SNAPSHOT</version>
+
+    <properties>
+        <java.version>11</java.version>
+    </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>5.8.2</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
+
     <build>
         <plugins>
             <plugin>
@@ -19,9 +33,4 @@
             </plugin>
         </plugins>
     </build>
-
-    <properties>
-        <java.version>11</java.version>
-    </properties>
-
 </project>
